# SOFTUDIO

./: CMakeLists.txt  SOFTUDIO.sln  animatedloadinglabel.cpp  animatedloadinglabel.h  app_resources.rc  framelessdialogbase.cpp  framelessdialogbase.h  loadingworker.cpp  loadingworker.h  main.cpp  projectfilevalidatorworker.cpp  projectfilevalidatorworker.h  projectinfo.h  projects.json  scannerdialog.cpp  scannerdialog.h  scanworker.cpp  scanworker.h  shiningbutton.cpp  shiningbutton.h  splash_constants.h  splashscreen.cpp  splashscreen.h
